Change tagResolvers list to be mutable